--- a/site/assets/src/scss/styles.scss
+++ b/site/assets/src/scss/styles.scss
@@ -5,6 +5,7 @@
 @import 'reset';
 @import 'variables';
 @import 'functions';
+@import 'compatibility';
 @import 'root-variables';
 @import 'colors';
 @import 'icons';
@@ -262,6 +263,9 @@ input::-webkit-calendar-picker-indicator {
   display: flex;
   align-items: center;
   gap: spacing(-2);
+
+  @include gap-fallback(-2);
+
   flex-grow: 0;
   padding-top: spacing(-3);
   padding-bottom: spacing(-3);
@@ -903,8 +907,10 @@ input::-webkit-calendar-picker-indicator {
         }
     }
 
-    launch-course {
-        margin-right: calc( -1 * var(--s0, 1em) );
+    @supports (inset: 0) {
+      launch-course {
+          margin-right: calc( -1 * var(--s0, 1em) );
+      }
     }
 }
 @media (max-width: $break-lg) {
