--- a/site/assets/src/scss/utilities/spacing.scss
+++ b/site/assets/src/scss/utilities/spacing.scss
@@ -2,6 +2,8 @@
     .gap-#{$i} {
         gap: spacing($i);
         grid-gap: spacing($i);
+
+        @include gap-fallback($i);
     }
     .gapx-#{$i} {
         column-gap: spacing($i);
